# ruby-base-image

./: Dockerfile  MODULE.bazel
.github/workflows/: build.yaml
base/: BUILD  bookworm.lock.json  bookworm.yaml
ruby/: BUILD
