bazel_dep(name = "rules_distroless", version = "0.5.1")
bazel_dep(name = "aspect_bazel_lib", version = "2.14.0")
bazel_dep(name = "rules_oci", version = "2.2.5")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_foreign_cc", version = "0.14.0")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

_ALL_CONTENT = """\
filegroup(
    name = "all_srcs",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)
"""

http_archive(
    name = "ruby_src",
    add_prefix = "output",
    build_file_content = _ALL_CONTENT,
    sha256 = "41328ac21f2bfdd7de6b3565ef4f0dd7543354d37e96f157a1552a6bd0eb364b",
    urls = ["https://cache.ruby-lang.org/pub/ruby/3.4/ruby-3.4.2.tar.gz"],
)

apt = use_extension("@rules_distroless//apt:extensions.bzl", "apt")
apt.install(
    name = "bookworm",
    lock = "@@//base:bookworm.lock.json",
    manifest = "//base:bookworm.yaml",
)
use_repo(apt, "bookworm")
